# dataroom

./: .gitignore  README.md  main.py  pyproject.toml
data/: test_data.csv
docs/: system_prompt.txt
outputs/: Sample-Purchase-and-Sale-Agreement_output.md  TASK_DESCRIPTION_page_chunks_full.json  test_data_output.md
src/: __init__.py
src/dataroom/: __init__.py
src/dataroom/agent/: __init__.py  agent.py
src/dataroom/rag/: __init__.py  build_database.py  chunks.py  config.py  document_manager.py  embedder.py  rag_chain.py  rag_config.yaml
src/dataroom/tools/: __init__.py  parser.py  rag_tool.py
src/dataroom/ui/: __init__.py  interface.py
src/dataroom/utils/: __init__.py  utils.py
tests/: test_database.py  test_database_simple.py  test_embedder.py  test_full_rag.py  test_parser.py
x_rag/: build_database.py  chains.py  chunks.py  data_loader.py  embedder.py  rag_config.yaml
